<resources>
    <string name="app_name">Suitmedia Test</string>
    <string name="inputNamePlaceholder">Name</string>
    <string name="inputPalindromePlaceholder">Palindrome</string>
    <string name="check">check</string>
    <string name="next">next</string>
    <string name="retry">coba lagi</string>
    <string name="firstname_lastname">Firstname Lastname</string>
    <string name="emailPlaceholder">EMAIL@EMAIL.COM</string>
    <string name="back_button">Back Button</string>
    <string name="third_screen">Third Screen</string>
    <string name="second_screen">Second Screen</string>
    <string name="welcome">Welcome</string>
    <string name="name">John Doe</string>
    <string name="selected_user_name">Selected User Name</string>
    <string name="choose_a_user">Choose a User</string>
    <string name="icon">Icon</string>
    <string name="no_users_found">No users found.</string>
</resources>